Attempted fixes for mobile nav on iOS

--- a/components/navigation-tile/assets/styles/navigation-tile.scss
+++ b/components/navigation-tile/assets/styles/navigation-tile.scss
@@ -148,7 +148,7 @@ $tile-border-horizontal: 1px;
 }
 
 .projects {
-  @include tile;
+  @include tile('tile-projects.svg');
 }
 
 .setup {
