--- a/components/navigation/assets/styles/navigation.scss
+++ b/components/navigation/assets/styles/navigation.scss
@@ -17,6 +17,7 @@
   left: 0;
   z-index: 99;
   transition: $animation-speed;
+  transform: translate3d(0,0,0);
 
   // Tablet screens+
   @include breakpoint($small) {
