--- a/components/site-logo/assets/styles/site-logo.scss
+++ b/components/site-logo/assets/styles/site-logo.scss
@@ -14,9 +14,8 @@
   right: 10px;
   width: 30px;
   height: 30px;
-  transform: perspective( $small-default-perspective ) rotateY( -15deg );
+  transform: translate3d(0,0,0) perspective( $small-default-perspective ) rotateY( -15deg );
   transform-origin: 20% 0;
-  transition: $animation-speed-xslow;
   pointer-events: all;
   background-image: url('../images/logo.svg');
   background-repeat: no-repeat;
@@ -27,13 +26,9 @@
     height: 150px;
   }
 
-  &:hover {
-    transform: perspective( $small-hover-perspective ) rotateY( -25deg );
-  }
-
   .admin-bar & {
     @include rem(top, 20px);
-    
+
     @include small {
       @include rem(top, 50px);
     }
